--- a/cubes-play/src/component/Controls/styled/index.css
+++ b/cubes-play/src/component/Controls/styled/index.css
@@ -11,7 +11,16 @@
 }
 
 .live-controls-form legend {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
   font-size: 1rem;
+}
+
+.live-controls-form legend .icon {
+  display: block;
+  padding: .25rem;
+  margin-left: 1rem;
 }
 
 .live-controls-form .form-group {
